[package]
name = "inline-str"
version = "0.1.0"
edition = "2021"
authors = ["Adam Gutglick <adamgsal@gmail.com>"]
description = "Efficent and immutable string type, backed by inline-array"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/adamgs/inline-str"
homepage = "https://github.com/adamgs/inline-str"
readme = "README.md"
keywords = ["string", "compact", "stack", "immutable", "database"]
categories = ["data-structures", "compression"]

[dependencies]
inline-array = "0.1.13"
