[package]
name = "inline-str"
version = "0.5.0"
edition = "2024"
authors = ["Adam Gutglick <adamgsal@gmail.com>"]
description = "Efficient and immutable string type, backed by inline-array"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/adamgs/inline-str"
homepage = "https://github.com/adamgs/inline-str"
readme = "README.md"
keywords = ["string", "compact", "stack", "immutable", "database"]
categories = ["data-structures", "compression"]

[dependencies]
inline-array = "0.1.14"
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
serde_json = "1"

[features]
serde = ["inline-array/serde", "dep:serde"]
